# dexter

./: .gitignore  CMakeLists.txt  README.md  a.out  main.c
include/: command_handler.h  commands.h  parser.h  prompt_handler.h
scripts/: build.sh  clean.sh
src/: main.c
src/commands/: commands.c
src/handlers/: command_handler.c  prompt_handler.c
src/parsers/: parser.c
